# NocionesClave_BeatrizGarrido

./: CMakeLists.txt  README.md
proyecto1/: Estudiante.cpp  Persona.h  main.cpp
proyecto2/: funciones.cpp  funciones.h  main2.cpp  matematicas.cpp  matematicas.h
